--- a/Real-time Chat/task/resources/static/styles.css
+++ b/Real-time Chat/task/resources/static/styles.css
@@ -10,6 +10,24 @@ body {
     margin-top: 20px;
 }
 
+#username-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#chat-container {
+    display: flex;
+    flex-grow: 2;
+    flex-direction: column;
+}
+
+.message-container {
+    border-bottom: 2px solid #ccc;
+    padding: 5px;
+    margin-left: 5px;
+}
+
 #messages {
     flex-grow: 2;
     overflow-y: auto;
@@ -25,6 +43,15 @@ body {
 
 .message:last-child {
     border-bottom: none;
+}
+
+.sender {
+    font-weight: bold;
+}
+
+.date {
+    font-size: 0.8em;
+    color: gray;
 }
 
 .input-footer {
