--- a/Real-time Chat/task/resources/static/styles.css
+++ b/Real-time Chat/task/resources/static/styles.css
@@ -31,6 +31,8 @@ body {
 #messages {
     flex-grow: 2;
     overflow-y: auto;
+    border: 1px solid #ccc;
+    padding: 10px;
 }
 
 .message {
@@ -43,6 +45,18 @@ body {
 
 .message:last-child {
     border-bottom: none;
+}
+
+#users {
+    flex: 1;
+    border: 1px solid #ccc;
+    padding: 10px;
+    overflow-y: auto;
+    max-height: 50px;
+}
+
+.user {
+    margin-bottom: 5px;
 }
 
 .sender {
