Private/Public chat initial functionality

--- a/Real-time Chat/task/resources/static/styles.css
+++ b/Real-time Chat/task/resources/static/styles.css
@@ -50,7 +50,7 @@ body {
     flex-direction: column;
 }
 
-#chat-header {
+#chat-with {
     padding: 15px;
     font-weight: bold;
     border-bottom: 1px solid #e0e0e0;
