--- a/Real-time Chat/task/resources/static/styles.css
+++ b/Real-time Chat/task/resources/static/styles.css
@@ -87,7 +87,6 @@ body {
     padding: 10px 15px;
     cursor: pointer;
     color: #202124;
-    border-bottom: 1px solid #e0e0e0;
 }
 
 .user:hover {
@@ -157,6 +156,27 @@ body {
     border: none;
     border-radius: 50%;
     cursor: pointer;
+}
+
+.user-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.user-container:hover {
+    background-color: #e8e8e8;
+}
+
+.new-message-counter {
+    background-color: #1a73e8;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 0.8em;
 }
 
 #send-msg-btn:hover {
